log
ju.,  5 de ago. de 2021 19:15:54: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createNode':
list.c:25:15: error: assignment discards 'const' qualifier from pointer target type [-Werror=discarded-qualifiers]
     new->data = data;
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
9e031e5
ju.,  5 de ago. de 2021 19:17:03: 
 list.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  0|0
8e7f400
ju.,  5 de ago. de 2021 19:19:56: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createNode':
list.c:25:15: error: assignment discards 'const' qualifier from pointer target type [-Werror=discarded-qualifiers]
     new->data = data;
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
ae19612
ju.,  5 de ago. de 2021 19:20:08: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
30bd984
ju.,  5 de ago. de 2021 19:20:28: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
7beab32
ju.,  5 de ago. de 2021 19:20:54: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|6
total_score: 5/70
cb7489c
ju.,  5 de ago. de 2021 19:25:24: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
1cd6099
ju.,  5 de ago. de 2021 19:37:31: 
 tests:  0|6
total_score: 0/70
3382ce2
